deploy: 638646eedec87bbe0141aca4016b4b48e0fcf362

--- a/instellingen.html
+++ b/instellingen.html
@@ -268,7 +268,12 @@
 <li>
 <p>Instellingen -&gt; Online accounts -&gt; Google</p>
 <ul>
-<li>drive</li>
+<li>
+<p>drive</p>
+</li>
+<li>
+<p>email</p>
+</li>
 </ul>
 </li>
 </ul>
