--- a/oefeningen.html
+++ b/oefeningen.html
@@ -1110,6 +1110,133 @@
 <li><p>Volg de stappen van “terugzetten van de originele achtergrond” van de vorige opgave</p></li>
 </ul></li>
 </ol>
+<h1 id="instellingen">Instellingen</h1>
+<ol type="1">
+<li><p>Op welke manieren kun je instellingen openen? Noem er drie (er zijn er minstens vier).</p></li>
+<li><p>Stel donker thema in</p>
+<ul>
+<li><p>Open instellingen met <code>SUPER+I</code></p></li>
+<li><p>Selecteer in het linkerpaneel “Weergave”</p></li>
+<li><p>Kies aan de rechterzijde onder “Stijl” de “Donker” optie</p></li>
+<li><p>Sluit instellingen met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Schakel schermvergrendeling uit</p>
+<ul>
+<li><p>Open instellingen met <code>SUPER+I</code></p></li>
+<li><p>Selecteer in het linkerpaneel “Privacy”</p></li>
+<li><p>Selecteer in het linkerpaneel “Scherm”</p></li>
+<li><p>Zet aan de rechterzijde de schakelaar “Automatische schermvergrendeling” uit (de schakelaar wordt dan grijs).</p></li>
+<li><p>Sluit instellingen met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Zet nachtlicht aan via instellingen</p>
+<ul>
+<li><p>Open instellingen met <code>SUPER+I</code></p></li>
+<li><p>Selecteer in het linkerpaneel “Schermen”</p></li>
+<li><p>Selecteer aan de rechterzijde “Nachtlicht”</p></li>
+<li><p>Schakel handmatige planning in</p></li>
+<li><p>Stel de tijden in op 10:00 tot 22:00</p></li>
+<li><p>Schakel het nachtlicht in</p></li>
+<li><p>Sluit instellingen met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Schakel het nachtlicht uit via het systeemmenu</p></li>
+<li><p>Stel grote letters in</p>
+<ul>
+<li><p>Open instellingen met <code>SUPER+I</code></p></li>
+<li><p>Selecteer in het linkerpaneel “Toegankelijkheid”</p></li>
+<li><p>Schakel onder het kopje “Zicht” de “Grote letters” optie in</p></li>
+<li><p>Sluit instellingen met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Zet de standaard stijl terug in het “Weergave” deel van de instellingen</p></li>
+<li><p>Zet schermvergrendeling in op 30 minuten onder “Schermen” van de afdeling “Privacy”</p></li>
+<li><p>Zet grote letters uit via toegankelijkheidsmenu <img src="img/toegankelijkheidsmenu.png" height="25" /> in bovenbalk</p></li>
+<li><p>Stel samensteltoets in op rechter alt</p>
+<ul>
+<li><p>Open instellingen met <code>SUPER+I</code></p></li>
+<li><p>Selecteer in het linkerpaneel “Toetsenbord”</p></li>
+<li><p>Stel onder het kopje “Invoer voor speciale tekens” de “Samensteltoets” in op “Rechter Alt”</p></li>
+<li><p>Sluit instellingen met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Speciale tekens invoeren via zoekvak</p>
+<ul>
+<li><p>Open “Tekstbewerker” door <code>SUPER teks ENTER</code></p></li>
+<li><p>Voer de volgende teksten in op aparte regels:</p>
+<ul>
+<li><p>Esmé</p>
+<ul>
+<li>Type <code>Esm</code>, dan <code>SUPER e acute ↓ ENTER</code> en dan <code>CTRL+V</code></li>
+</ul></li>
+<li><p>Daniël</p>
+<ul>
+<li>Type <code>Dani</code>, dan <code>SUPER e diaere ↓↓ ENTER</code> en dan <code>CTRL+V</code>, type tenslotte een <code>l</code></li>
+</ul></li>
+<li><p>€42,-</p>
+<ul>
+<li><code>SUPER euro sign ↓ ENTER</code> en type dan <code>42,-</code></li>
+</ul></li>
+</ul></li>
+<li><p>Sla het document op onder de naam “zoekvak.txt” in “Documenten”</p></li>
+<li><p>Sluit de tekstbewerker met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Speciale tekens invoeren via “Tekens en symbolen” <img src="img/tekens-symbolen-icon.png" height="25" /></p>
+<ul>
+<li><p>Open “Tekstbewerker” door <code>SUPER teks ENTER</code></p></li>
+<li><p>Voer de volgende teksten in op aparte regels:</p>
+<ul>
+<li><p>Esmé</p>
+<ul>
+<li><p>Type <code>Esm</code></p></li>
+<li><p>Open “Tekens en symbolen” door <code>SUPER sym ENTER</code></p></li>
+<li><p>Selecteer onder “Letters” é</p></li>
+<li><p>Klik in de popup op “Teken kopiëren”</p></li>
+<li><p>Schakel met <code>ALT+TAB</code> naar de tekstbewerker terug</p></li>
+<li><p><code>CTRL+V</code></p></li>
+</ul></li>
+<li><p>Daniël</p>
+<ul>
+<li><p>Type <code>Dani</code></p></li>
+<li><p>Schakel met <code>ALT+TAB</code> naar “Tekens en symbolen”</p></li>
+<li><p>Selecteer onder “Letters” ë</p></li>
+<li><p>Klik in de popup op “Teken kopiëren”</p></li>
+<li><p>Schakel met <code>ALT+TAB</code> naar de tekstbewerker terug</p></li>
+<li><p><code>CTRL+V</code></p></li>
+<li><p>Type <code>l</code></p></li>
+</ul></li>
+<li><p>€42,-</p>
+<ul>
+<li><p>Schakel met <code>ALT+TAB</code> naar “Tekens en symbolen”</p></li>
+<li><p>Selecteer onder “Valute” €</p></li>
+<li><p>Klik in de popup op “Teken kopiëren”</p></li>
+<li><p>Schakel met <code>ALT+TAB</code> naar de tekstbewerker terug</p></li>
+<li><p><code>CTRL+V</code></p></li>
+<li><p>Type <code>42,-</code></p></li>
+</ul></li>
+</ul></li>
+<li><p>Sla het document op onder de naam “tekens-en-symbolen.txt” in “Documenten”</p></li>
+<li><p>Sluit de tekstbewerker met <code>ALT+F4</code></p></li>
+<li><p>Sluit “Tekens en symbolen” met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Speciale tekens invoeren via samensteltoets</p>
+<ul>
+<li><p>Open “Tekstbewerker” door <code>SUPER teks ENTER</code></p></li>
+<li><p>Voer de volgende teksten in op aparte regels:</p>
+<ul>
+<li><p>Esmé</p>
+<ul>
+<li>Type <code>Esm</code>, dan <code>RECHTER_ALT ' e</code></li>
+</ul></li>
+<li><p>Daniël</p>
+<ul>
+<li>Type <code>Dani</code>, dan <code>RECHTER_ALT " e</code> en type tenslotte een <code>l</code></li>
+</ul></li>
+<li><p>€42,-</p>
+<ul>
+<li><code>RECHTER_ALT = c</code> en type dan <code>42,-</code></li>
+</ul></li>
+</ul></li>
+<li><p>Sla het document op onder de naam “samensteltoets.txt” in “Documenten”</p></li>
+<li><p>Sluit de tekstbewerker met <code>ALT+F4</code></p></li>
+</ul></li>
+</ol>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
 <ol type="1">
 <li><p>Welke toepassing moet u starten om updates uit te voeren?</p></li>
@@ -1122,19 +1249,6 @@
 <li><p>zet terminal als opstart toepassing</p></li>
 <li><p>meld u af en weer aan en overtuig uzelf ervan dat de terminal toepassing is gestart</p></li>
 <li><p>verwijder terminal als opstart toepassing</p></li>
-</ol></li>
-</ol>
-<h1 id="vensters-werkbladen-en-bureaubladen">Vensters, werkbladen en bureaubladen</h1>
-<ol type="1">
-<li><p>Pas achtergrond aan:</p>
-<ol type="i">
-<li><p>Klik rechts op leeg stuk bureaublad</p></li>
-<li><p>Kies ‘Achtergrond aanpassen …’</p></li>
-</ol></li>
-<li><p>Schermbeveiliging uitschakelen</p>
-<ol type="i">
-<li><p>open ‘Scherm’ in instellingen (<code>SUPER</code>, <code>schermin</code> <code>ENTER</code>)</p></li>
-<li><p>schakel schermbeveiliging uit</p></li>
 </ol></li>
 </ol>
 <h1 id="online-accounts">Online accounts</h1>
