--- a/samenvatting.html
+++ b/samenvatting.html
@@ -568,7 +568,8 @@
 <ul>
 <li><p>Instellingen -&gt; Online accounts -&gt; Google</p>
 <ul>
-<li>drive</li>
+<li><p>drive</p></li>
+<li><p>email</p></li>
 </ul></li>
 </ul>
 <!-- __N.B.__ Microsoft account werkt **niet**. -->
