--- a/samenvatting.html
+++ b/samenvatting.html
@@ -596,7 +596,7 @@
 <!-- - Google chrome
 
 - Visual studio -->
-<h3 id="standaardtoepassingen">Standaardtoepassingen</h3>
+<h2 id="standaardtoepassingen">Standaardtoepassingen</h2>
 <p><img src="img/standaardtoepassingen.png" /></p>
 <h3 id="standaardtoepassing-per-bestandstype">Standaardtoepassing per bestandstype</h3>
 <ul>
@@ -609,7 +609,11 @@
 <figure>
 <img src="img/bestanden-dialoogvenster-openen-met.png" width="200" alt="" /><figcaption>Dialoogvenster “Openen met”</figcaption>
 </figure>
-<h3 id="opstarttoepassingen"><a href="https://help.gnome.org/users/gnome-help/stable/shell-apps-auto-start.html.en"><em>Opstarttoepassingen</em></a></h3>
+<h2 id="opstarttoepassingen"><a href="https://help.gnome.org/users/gnome-help/stable/shell-apps-auto-start.html.en"><em>Opstarttoepassingen</em></a></h2>
 <p><img src="img/opstarttoepassingen.png" /></p>
+<ul>
+<li><p>Open Afstellingen (<code>SUPER+SHIFT+I</code> )</p></li>
+<li><p>“Opstarttoepassingen”</p></li>
+</ul>
 </body>
 </html>
