deploy: 3f403023186689afa6c352f527a60411da07b2eb

--- a/oefeningen.html
+++ b/oefeningen.html
@@ -1236,50 +1236,154 @@
 <li><p>Sla het document op onder de naam “samensteltoets.txt” in “Documenten”</p></li>
 <li><p>Sluit de tekstbewerker met <code>ALT+F4</code></p></li>
 </ul></li>
+<li><p>Gebruikers plaatje wijzigen</p>
+<ul>
+<li><p>Open Instellingen <img src="img/instellingen-knop.png" width="20" /> via het systeemmenu <img src="img/systeem-menu-gesloten.png" height="20" /></p></li>
+<li><p>Selecteer in het linker paneel “Gebruikers”</p></li>
+<li><p>Klik op het pennetje bij de afbeelding</p></li>
+<li><p>Kies een nieuwe afbeelding</p></li>
+<li><p>Sluit instellingen af met <code>ALT+F4</code></p></li>
+<li><p>Vergrendel het scherm <code>SUPER+L</code></p></li>
+<li><p>Bekijk de nieuwe afbeelding</p></li>
+<li><p>Ontgrendel het scherm met het wachtwoord <code>tux</code></p></li>
+<li><p>Zet de oude afbeelding terug</p>
+<ul>
+<li><p>Open instellingen <code>SUPER+I</code></p></li>
+<li><p>Selecteer links “Gebruikers”</p></li>
+<li><p>Klik op het pennetje bij de afbeelding</p></li>
+<li><p>Klik op “Selecteer bestand…”</p></li>
+<li><p>Selecteer uit de “Persoonlijke map” het verborgen bestand <code>.face</code> (wellicht moet u <code>CTRL+H</code> in drukken om de verborgen bestanden te tonen)</p></li>
+</ul></li>
+<li><p>Sluit instellingen af met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Gebruikers naam wijzigen</p>
+<ul>
+<li><p>Open Instellingen <img src="img/instellingen-knop.png" width="20" /> via het systeemmenu <img src="img/systeem-menu-gesloten.png" height="20" /></p></li>
+<li><p>Selecteer in het linker paneel “Gebruikers”</p></li>
+<li><p>Klik op het pennetje aan de rechterzijde van de regel met “Naam”</p></li>
+<li><p>Type uw naam gevolgd door <code>ENTER</code></p></li>
+<li><p>Sluit instellingen af met <code>ALT+F4</code></p></li>
+<li><p>Vergrendel het scherm <code>SUPER+L</code></p></li>
+<li><p>Ga na dat uw naam nu vermeld wordt</p></li>
+<li><p>Ontgrendel het scherm met het wachtwoord <code>tux</code></p></li>
+<li><p>Zet de naam terug op “Tux”</p>
+<ul>
+<li><p>Open instellingen <code>SUPER+I</code></p></li>
+<li><p>Selecteer links “Gebruikers”</p></li>
+<li><p>Klik op het pennetje aan de rechterzijde van de regel met “Naam”</p></li>
+<li><p>Type <code>Tux ENTER</code></p></li>
+</ul></li>
+<li><p>Sluit instellingen af met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Google account toevoegen</p>
+<ul>
+<li><p>Indien u geen Google account hebt vraagt u dat nu aan (u kunt het aan het eind van deze les weer vernietigen als u dat wilt)</p></li>
+<li><p>Open instelligen met <code>SUPER+I</code></p></li>
+<li><p>Klik in het linkerpaneel op “Online accounts”</p></li>
+<li><p>Klik onder het kopje “Een account toevoegen” op “Google”</p></li>
+<li><p>Volg de stappen</p>
+<ul>
+<li><p>email of telefoonnummer</p></li>
+<li><p>wachtwoord</p></li>
+<li><p>toestaan van de machtiging</p></li>
+</ul></li>
+<li><p>Sluit instellingen met <code>ALT+F4</code></p></li>
+<li><p>Open de bestandbeheerder en ga na dat uw drive is aangekoppeld (xxx@gmail.com)</p>
+<ul>
+<li><p>Kopieer <code>samenvatting.pdf</code> uit “Downloads” naar uw drive</p></li>
+<li><p>Inspecteer op uw telefoon dat u daar het bestand kunt openen</p></li>
+</ul></li>
+<li><p>Open evolution mail met <code>SUPER+2</code> en ga na dat u uw gmail daar ziet</p>
+<ul>
+<li><p>Verstuur een email naar uwzelf</p></li>
+<li><p>Inspecteer op uw telefoon dat</p></li>
+</ul></li>
+<li><p>Open Agenda <code>SUPER Agen ENTER</code></p>
+<ul>
+<li>Bekijk uw Google agenda</li>
+</ul></li>
+<li><p>Sluit alle toepassingen</p></li>
+<li><p>Open instelligen met <code>SUPER+I</code></p></li>
+<li><p>Klik in het linkerpaneel op “Online accounts”</p></li>
+<li><p>Klik op uw Google account bovenaan de pagina</p></li>
+<li><p>Klik op de rode knop “Account verwijderen” (dit verwijdert uiteraard niet uw Google account, maar alleen de koppeling tussen uw account en deze computer).</p></li>
+<li><p>Sluit instellingen met <code>ALT+F4</code></p></li>
+</ul></li>
 </ol>
 <h1 id="toepassingen-installeren">Toepassingen installeren</h1>
 <ol type="1">
 <li><p>Welke toepassing moet u starten om updates uit te voeren?</p></li>
-<li><p>Standaard applicatie wijzigen</p>
-<ol type="a">
-<li>Web naar Chromium</li>
-</ol></li>
+<li><p>Bladeren in Software</p>
+<ul>
+<li><p>Open Software <code>SUPER+5</code></p></li>
+<li><p>Klik op “Maken” (oefen geduld uit)</p></li>
+<li><p>Scroll door de lijst</p></li>
+<li><p>Sluit Software met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Installeren van xpdf</p>
+<ul>
+<li><p>Open Software <code>SUPER+5</code></p></li>
+<li><p>Type <code>xpdf</code></p></li>
+<li><p>Ga naar de details van xpdf door erop te klikken</p></li>
+<li><p>Klik op “Installeren”</p></li>
+<li><p>Wachtwoord van beheerder is <code>root</code></p></li>
+<li><p>Sluit Software met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Installeren van Chromium</p>
+<ul>
+<li><p>Open Software <code>SUPER+5</code></p></li>
+<li><p>Type <code>chromium web</code></p></li>
+<li><p>Ga naar de details van “Chromium Web Browser” door erop te klikken</p></li>
+<li><p>Klik op “Installeren”</p></li>
+<li><p>Wachtwoord van beheerder is <code>root</code></p></li>
+<li><p>Sluit Software met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Standaard applicatie Web wijzigen naar Chromium</p>
+<ul>
+<li><p>Open standaardtoepassingen in Instellingen met <code>SUPER standaa ENTER</code></p></li>
+<li><p>Klik het lijstje van “Web” open en kies “Chromium”</p></li>
+<li><p>Sluit instellingen af met <code>ALT+F4</code></p></li>
+<li><p>Open de bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Ga naar “Downloads”</p></li>
+<li><p>Dubbelklik op “samenvatting.pdf”</p></li>
+<li><p>Scroll naar “Bestanden” -&gt; “Bestanden op Linux”</p></li>
+<li><p>Klik op de link <em>thuismap</em></p></li>
+<li><p>Overtuig uzelf ervan dat deze link nu in Chromium wordt geopend</p></li>
+<li><p>Sluit bestandsbeheerder, Chromium en samenvatting.pdf</p></li>
+<li><p>Open standaardtoepassingen in Instellingen met <code>SUPER standaa ENTER</code></p></li>
+<li><p>Klik het lijstje van “Web” open en kies “Firefox”</p></li>
+<li><p>Sluit instellingen af met <code>ALT+F4</code></p></li>
+<li><p>Open de bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Ga naar “Downloads”</p></li>
+<li><p>Dubbelklik op “samenvatting.pdf”</p></li>
+<li><p>Scroll naar “Bestanden” -&gt; “Bestanden op Linux”</p></li>
+<li><p>Klik op de link <em>thuismap</em></p></li>
+<li><p>Overtuig uzelf ervan dat deze link nu in Firefox wordt geopend</p></li>
+<li><p>Sluit bestandsbeheerder, Chromium en samenvatting.pdf</p></li>
+</ul></li>
 <li><p>Terminal als opstart toepassing toevoegen</p>
-<ol type="a">
-<li><p>zet terminal als opstart toepassing</p></li>
-<li><p>meld u af en weer aan en overtuig uzelf ervan dat de terminal toepassing is gestart</p></li>
-<li><p>verwijder terminal als opstart toepassing</p></li>
-</ol></li>
-</ol>
-<h1 id="online-accounts">Online accounts</h1>
-<ol type="1">
-<li><p>Voeg een online account toe</p></li>
-<li><p>Inspecteer de kalender</p>
-<ol type="a">
-<li><p>voeg een afspraak toe</p></li>
-<li><p>controleer op een ander medium (telefoon) dat de afspraak is gemaakt</p></li>
-<li><p>verwijder deze afspraak weer</p></li>
-</ol></li>
-<li><p>Bekijk je drive</p>
-<ol type="a">
-<li><p>maak een bestand aan in drive</p></li>
-<li><p>controleer op een ander medium dat het bestand is aangemaakt</p></li>
-<li><p>verwijder het bestand weer</p></li>
-</ol></li>
-<li><p>Verwijder je online account</p></li>
-</ol>
-<h1 id="speciale-tekens">Speciale tekens</h1>
-<ol type="1">
-<li><p>Euroteken invoeren</p>
-<ol type="a">
-<li><p>via speciale tekens toepassing</p></li>
-<li><p><code>Ctrl-Shift-U 20ac SPATIEBALK</code></p></li>
-</ol></li>
-<li><p>é (e accent) invoeren</p>
-<ol type="a">
-<li><p>via speciale tekens toepassing</p></li>
-<li><p><code>CTRL-SHIFT-U 00e9 SPATIEBALK</code></p></li>
-</ol></li>
+<ul>
+<li><p>Zet terminal als opstart toepassing</p>
+<ul>
+<li><p>Open “Afstellingen” met <code>SUPER+SHIFT+I</code></p></li>
+<li><p>Klik aan de linkerzijde met “Opstarttoepassingen”</p></li>
+<li><p>Klik op de +</p></li>
+<li><p>Klik op <img src="img/bestanden-vergrootglas.png" height="20" /></p></li>
+<li><p>Type <code>term</code></p></li>
+<li><p>Klik “Terminalvenster” aan</p></li>
+<li><p>Klik op “Toevoegen”</p></li>
+</ul></li>
+<li><p>Sluit Afstellingen af met <code>ALT+F4</code></p></li>
+<li><p>Meld u af en weer aan en overtuig uzelf ervan dat de terminal toepassing is gestart</p></li>
+<li><p>Verwijder terminal als opstart toepassing</p>
+<ul>
+<li><p>Open “Afstellingen” met “SUPER afstel ENTER”</p></li>
+<li><p>Klik aan de linkerzijde met “Opstarttoepassingen”</p></li>
+<li><p>Klik op “Verwijderen” naast “Terminalvenster”</p></li>
+</ul></li>
+<li><p>Sluit Afstellingen af met <code>ALT+F4</code></p></li>
+<li><p>Meld u af en weer aan en overtuig uzelf ervan dat de terminal toepassing niet meer wordt gestart</p></li>
+</ul></li>
 </ol>
 </body>
 </html>
