--- a/rondleiding-gnome.html
+++ b/rondleiding-gnome.html
@@ -338,6 +338,7 @@ bestaat uit</p>
 <li>drukt u op <code>ALT+CTRL+DELETE</code></li>
 <li>klikt u in het systeemmenu <img src="img/systeem-menu-gesloten.png" alt="" /> op <img src="img/afsluit-menu-knop.png" alt="" /> en dan op &quot;Uitschakelen&quot;<br />
 </li>
+<li><code>SUPER uits ENTER</code></li>
 </ul>
 </section>
 </foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-theme="gaia" style="" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="37" data-theme="gaia" style="--theme:gaia;">
