--- a/samenvatting.html
+++ b/samenvatting.html
@@ -26,19 +26,31 @@
 <h1 id="notatie">Notatie</h1>
 <p>Het lettertype <code>Courier</code> wordt gebruikt om iets op te schrijven dat u op het toetsenbord kunt typen. Uitzondering hierop zijn de volgende speciale toetsen: <code>SPATIEBALK</code>, <code>CTRL</code>, <code>ALT</code>, <code>SUPER</code>, <code>MENU</code>, <code>TAB</code>, <code>HOME</code>, <code>END</code>, <code>ESC</code>, <code>DELETE</code>, <code>PageDown</code>, <code>PageUp</code>, <code>PrintScreen</code>, <code>F1</code>, <code>F2</code> … en <code>ENTER</code>, hier dient u betreffende toets in te drukken in plaats van het woord in te typen.</p>
 <h1 id="rondleiding-gnome">Rondleiding GNOME</h1>
-<ul>
-<li><p>Aanmelden in de displaymanager met account (gebruikersnaam=<code>tux</code>, wachtwoord=<code>tux</code>)</p></li>
-<li><p>Schermbeveiliging</p>
+<h2 id="aanmelden-in-de-displaymanager">Aanmelden in de displaymanager</h2>
+<p>Met account (gebruikersnaam=<code>tux</code>, wachtwoord=<code>tux</code>)</p>
+<h2 id="schermbeveiliging">Schermbeveiliging</h2>
 <ul>
 <li><p>Expres aanzetten (<code>SUPER+L</code>)</p></li>
 <li><p>Wachtwoord invoeren om verder te kunnen gaan</p></li>
-</ul></li>
-<li><p>Hulp openen (<code>SUPER+F1</code>)</p>
+</ul>
+<h2 id="hulp-openen">Hulp openen</h2>
 <ul>
-<li>Zoeken in Hulp met <code>CTRL+S</code>, zoeken op één pagina met <code>CTRL+F</code></li>
-</ul></li>
-<li><p>GNOME is een desktop manager</p></li>
-<li><p>Modi</p>
+<li><p><code>SUPER+F1</code></p></li>
+<li><p>Zoeken in Hulp met <code>CTRL+S</code></p></li>
+<li><p>Zoeken op één pagina met <code>CTRL+F</code></p></li>
+</ul>
+<h2 id="gnome-is-een-desktop-manager">GNOME is een desktop manager</h2>
+<ul>
+<li><p>GNOME is de standaard <strong>desktop-manager</strong></p></li>
+<li><p>regelt het tekenen van de window decoraties</p></li>
+<li><p>voorziet in icons, toolbars, wallpapers en desktop widgets</p></li>
+<li><p>werkt met twee modi:</p>
+<ol type="1">
+<li><p>Normale modus</p></li>
+<li><p>Activiteiten modus</p></li>
+</ol></li>
+</ul>
+<h2 id="modi">Modi</h2>
 <ul>
 <li><p>Normale modus</p></li>
 <li><p>Activiteiten modus (<code>SUPER</code>)</p>
@@ -56,26 +68,27 @@
 <li><p>Toepassing slepen naar werkblad</p></li>
 <li><p>Dash aanpassen</p></li>
 </ul></li>
-</ul></li>
-<li><p>Dash</p>
+</ul>
+<h2 id="dash">Dash</h2>
 <ul>
 <li><p>snelstarters voor veelgebruikte programma’s</p></li>
 <li><p>overzicht open programma’s</p></li>
 <li><p>Sneltoetsen <code>SUPER+1</code>, <code>SUPER+2</code>, … Om te openen en later focus terug te geven</p></li>
-</ul></li>
-<li><p>Bovenbalk</p>
+</ul>
+<h2 id="bovenbalk">Bovenbalk</h2>
 <ul>
 <li><p>Activiteiten knop</p></li>
 <li><p>Toepassingen menu (later)</p></li>
 <li><p>Notificatie venster / Kalender (<code>SUPER+V</code>)</p></li>
 <li><p>Toegankelijkheidsmenu (indien er een toegankelijkheids optie aanstaat)</p></li>
 <li><p>Systeemmenu</p></li>
-</ul></li>
-<li><p>Notificatie venster (<code>SUPER+V</code>)</p>
+</ul>
+<h2 id="notificatie-venster">Notificatie venster</h2>
 <ul>
-<li>kalender activeren met online-account</li>
-</ul></li>
-<li><p>Systeemmenu</p>
+<li><p><code>SUPER+V</code></p></li>
+<li><p>kalender activeren met online-account</p></li>
+</ul>
+<h2 id="systeemmenu">Systeemmenu</h2>
 <ul>
 <li><p>Volume regeling</p></li>
 <li><p>Screenshots maken</p></li>
@@ -83,8 +96,13 @@
 <li><p>Netwerk instellingen</p></li>
 <li><p>Vergrendeling</p></li>
 <li><p>Uitschakelen en afmelden</p></li>
-</ul></li>
-<li><p>Uitschakelen (<code>ALT+CTRL+DEL</code>)</p></li>
+</ul>
+<h2 id="uitschakelen">Uitschakelen</h2>
+<p>Om de computer uit te schakelen</p>
+<ul>
+<li><p>drukt u op <code>ALT+CTRL+DELETE</code></p></li>
+<li><p>klikt u in het systeemmenu <img src="img/systeem-menu-gesloten.png" height="20" /> op <img src="img/afsluit-menu-knop.png" height="20" /> en dan op “Uitschakelen” <img src="img/systeemmenu-afsluiten.png" height="200" /></p></li>
+<li><p><code>SUPER uits ENTER</code></p></li>
 </ul>
 <h1 id="toepassingen-starten-en-afsluiten">Toepassingen starten en afsluiten</h1>
 <h2 id="toepassingen-starten-op-zes-manieren">Toepassingen starten op zes manieren</h2>
@@ -95,7 +113,7 @@
 <ol start="2" type="1">
 <li>Type de naam van de toepassing in zoekvak</li>
 </ol>
-<h4 id="dash">Dash</h4>
+<h4 id="dash-1">Dash</h4>
 <ol start="3" type="1">
 <li><p>Sneltoetsen: <code>SUPER+1</code>, <code>SUPER+2</code>, <code>SUPER+3</code>, etc.</p>
 <ul>
