deploy: bcb0e1e50c9bcbd7878a6ef7c4609f6b3b35d448

--- a/oefeningen.html
+++ b/oefeningen.html
@@ -1317,7 +1317,7 @@
 <ul>
 <li><p>Open Software <code>SUPER+5</code></p></li>
 <li><p>Klik op “Maken” (oefen geduld uit)</p></li>
-<li><p>Scroll door de lijst</p></li>
+<li><p>Scroll door de lijst tot u Blender ziet staan</p></li>
 <li><p>Sluit Software met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Installeren van xpdf</p>
@@ -1337,6 +1337,22 @@
 <li><p>Klik op “Installeren”</p></li>
 <li><p>Wachtwoord van beheerder is <code>root</code></p></li>
 <li><p>Sluit Software met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Discord installeren vanuit een .deb bestand <span id="discord-installeren"></span></p>
+<ul>
+<li><p>Maak op discord.com een account aan als u dat nog niet hebt</p></li>
+<li><p>Meld u aan op discord.com</p></li>
+<li><p>Download de Deb voor Linux via het <img src="img/discord-app-downloaden.png" height="20" /> symbool aan de linkerzijde van de webpagina</p></li>
+<li><p>Open de bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Ga naar “Downloads”</p></li>
+<li><p>Klik rechts op “discord-0.0.XX.deb”</p></li>
+<li><p>Kies “Software-installatie”</p></li>
+<li><p>Klik op “Installeren”</p></li>
+<li><p>Sluit Software met <code>ALT+F4</code></p></li>
+<li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
+<li><p>Sluit Firefox met <code>ALT+F4</code></p></li>
+<li><p>Open discord met <code>SUPER disc ENTER</code></p></li>
+<li><p>Sluit discord met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Standaard applicatie Web wijzigen naar Chromium</p>
 <ul>
@@ -1361,6 +1377,61 @@
 <li><p>Overtuig uzelf ervan dat deze link nu in Firefox wordt geopend</p></li>
 <li><p>Sluit bestandsbeheerder, Chromium en samenvatting.pdf</p></li>
 </ul></li>
+<li><p>xpdf als standaard voor PDF bestanden instellen</p>
+<ul>
+<li><p>Open de bestandsbeheerder met <code>SUPER+4</code></p></li>
+<li><p>Ga naar “Downloads” met de bladwijzer in het linker paneel</p></li>
+<li><p>Selecteer “samenvatting.pdf” en druk <code>ENTER</code></p></li>
+<li><p>Overtuig uzelf ervan dat “samenvatting.pdf” is geopend met “Document weergave” door het hamburgermenu <img src="img/firefox-hamburgermenu.png" height="20" /> te openen en het item “Over Document weergave” te selecteren</p></li>
+<li><p>Sluit “Document weergave” met <code>ALT+F4</code></p></li>
+<li><p>Open het contextmenu van “samenvatting.pdf” (rechtsklikken)</p></li>
+<li><p>Kies “Openen met…”</p></li>
+<li><p>Zoek xpdf op in de lijst van toepassingen</p></li>
+<li><p>Selecteer xpdf</p></li>
+<li><p>Zet de knop “Altijd gebruiken voor dit bestandstype” om zodat die blauw kleurt</p></li>
+<li><p>Nu is “samenvatting.pdf” in xpdf geopend</p></li>
+<li><p>U sluit xpdf door <code>Q</code> in te drukken</p></li>
+<li><p>Selecteer “samenvatting.pdf” en druk <code>ENTER</code></p></li>
+<li><p>U ziet dat “samenvatting.pdf” opnieuw met xpdf wordt geopend</p></li>
+<li><p>U sluit xpdf door <code>Q</code> in te drukken</p></li>
+<li><p>Open het contextmenu van “samenvatting.pdf” (Selecteer “samenvatting.pdf” en druk <code>MENU</code>)</p></li>
+<li><p>Kies “Openen met…” <code>M</code></p></li>
+<li><p>Selecteer “Document weergave”</p></li>
+<li><p>Zet de knop “Altijd gebruiken voor dit bestandstype” om zodat die blauw kleurt</p></li>
+<li><p>Sluit “Document weergave” met <code>ALT+F4</code></p></li>
+<li><p>Selecteer “samenvatting.pdf” en druk <code>ENTER</code></p></li>
+<li><p>U ziet dat “samenvatting.pdf” opnieuw met “Document weergave” wordt geopend</p></li>
+<li><p>Sluit “samenvatting.pdf” en de bestandsbeheerder beide met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Verwijder Chromium</p>
+<ul>
+<li><p>Open Software met <code>SUPER+5</code></p></li>
+<li><p>Type <code>chromium web</code></p></li>
+<li><p>Klik “Chromium Web Browser” aan</p></li>
+<li><p>Klik op <img src="img/prullenbak.png" height="25" /></p></li>
+<li><p>Bevestig in het pop venster dat u Chromium wilt verwijderen</p></li>
+<li><p>Geef het beheerders wachtwoord op. Dat is <code>root</code></p></li>
+<li><p>Sluit Software af met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Verwijder xpdf</p>
+<ul>
+<li><p>Open Software met <code>SUPER+5</code></p></li>
+<li><p>Type <code>xpdf</code></p></li>
+<li><p>Klik “xpdf” aan</p></li>
+<li><p>Klik op <img src="img/prullenbak.png" height="25" /></p></li>
+<li><p>Bevestig in het pop venster dat u xpdf wilt verwijderen</p></li>
+<li><p>Geef het beheerders wachtwoord op. Dat is <code>root</code></p></li>
+<li><p>Sluit Software af met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Verwijder discord</p>
+<ul>
+<li><p>Open de bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Ga naar “Downloads”</p></li>
+<li><p>Klik rechts op “discord-0.0.XX.deb”</p></li>
+<li><p>Kies “Software-installatie”</p></li>
+<li><p>Klik op <img src="img/prullenbak.png" height="25" /></p></li>
+<li><p>Sluit Software met <code>ALT+F4</code></p></li>
+</ul></li>
 <li><p>Terminal als opstart toepassing toevoegen</p>
 <ul>
 <li><p>Zet terminal als opstart toepassing</p>
@@ -1368,7 +1439,7 @@
 <li><p>Open “Afstellingen” met <code>SUPER+SHIFT+I</code></p></li>
 <li><p>Klik aan de linkerzijde met “Opstarttoepassingen”</p></li>
 <li><p>Klik op de +</p></li>
-<li><p>Klik op <img src="img/bestanden-vergrootglas.png" height="20" /></p></li>
+<li><p>Klik op <img src="img/bestanden-vergrootglas.png" height="25" /></p></li>
 <li><p>Type <code>term</code></p></li>
 <li><p>Klik “Terminalvenster” aan</p></li>
 <li><p>Klik op “Toevoegen”</p></li>
@@ -1377,7 +1448,7 @@
 <li><p>Meld u af en weer aan en overtuig uzelf ervan dat de terminal toepassing is gestart</p></li>
 <li><p>Verwijder terminal als opstart toepassing</p>
 <ul>
-<li><p>Open “Afstellingen” met “SUPER afstel ENTER”</p></li>
+<li><p>Open “Afstellingen” met <code>SUPER afstel ENTER</code></p></li>
 <li><p>Klik aan de linkerzijde met “Opstarttoepassingen”</p></li>
 <li><p>Klik op “Verwijderen” naast “Terminalvenster”</p></li>
 </ul></li>
