--- a/samenvatting.html
+++ b/samenvatting.html
@@ -487,8 +487,8 @@
 <h2 id="toegankelijkheid">Toegankelijkheid</h2>
 <ul>
 <li><p>Instellingen -&gt; Toegankelijkheid</p></li>
-<li><p>Menu in bovenbalk <img src="img/toegankelijkheidsmenu.png" width="30" /></p></li>
 <li><p>Grote letters</p></li>
+<li><p>Menu in bovenbalk <img src="img/toegankelijkheidsmenu.png" width="30" /></p></li>
 </ul>
 <h2 id="speciale-tekens-invoeren">Speciale tekens invoeren</h2>
 <ul>
@@ -502,7 +502,8 @@
 <ul>
 <li><p>Instellingen -&gt; Toetsenbord -&gt; Invoer voor speciale tekens</p></li>
 <li><p>Samensteltoets op rechter alt zetten</p></li>
-<li><table>
+</ul>
+<table>
 <thead>
 <tr class="header">
 <th style="text-align: center;">Teken</th>
@@ -531,8 +532,9 @@
 <td style="text-align: left;"><code>COMPOSE ^ e</code></td>
 </tr>
 </tbody>
-</table></li>
-<li><p><a href="https://en.wikipedia.org/wiki/Compose_key#Common_compose_combinations"><em>Voor combinaties zie deze webpagina</em></a></p></li>
+</table>
+<ul>
+<li><a href="https://en.wikipedia.org/wiki/Compose_key#Common_compose_combinations"><em>Voor meer combinaties zie deze webpagina</em></a></li>
 </ul>
 <h3 id="speciale-tekens-via-het-zoekvak">Speciale tekens via het zoekvak</h3>
 <p>Voor invoeren via het zoekveld kunt de volgende namen gebruiken</p>
