deploy: 94660ddc6d73dd2fed70480246c4ff1ecba07955

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 </ol>
 <h2 id="presentaties">Presentaties</h2>
 <ol type="1">
+<li><p><a href="https://docs.google.com/presentation/d/1jGO4bEBD3utfBr7wg9z-2b5DdCehr2GIATCu6nqmAK8/edit?usp=sharing">Waarom Debian Linux</a></p></li>
 <li><p><a href="rondleiding-gnome.html">Rondleiding GNOME</a></p></li>
 <li><p><a href="toepassingen-starten-en-afsluiten.html">Toepassingen starten en afsluiten</a></p></li>
 <li><p><a href="firefox.html">Firefox</a></p></li>
