--- a/oefeningen.html
+++ b/oefeningen.html
@@ -1348,6 +1348,7 @@
 <li><p>Klik rechts op “discord-0.0.XX.deb”</p></li>
 <li><p>Kies “Software-installatie”</p></li>
 <li><p>Klik op “Installeren”</p></li>
+<li><p>Wachtwoord van beheerder is <code>root</code></p></li>
 <li><p>Sluit Software met <code>ALT+F4</code></p></li>
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
 <li><p>Sluit Firefox met <code>ALT+F4</code></p></li>
@@ -1430,6 +1431,7 @@
 <li><p>Klik rechts op “discord-0.0.XX.deb”</p></li>
 <li><p>Kies “Software-installatie”</p></li>
 <li><p>Klik op <img src="img/prullenbak.png" height="25" /></p></li>
+<li><p>Wachtwoord van beheerder is <code>root</code></p></li>
 <li><p>Sluit Software met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Terminal als opstart toepassing toevoegen</p>
