deploy: 86f153925ebfee396328e3e4c2fc739bb07b6a54

--- a/samenvatting.html
+++ b/samenvatting.html
@@ -25,6 +25,13 @@
 </header>
 <h1 id="notatie">Notatie</h1>
 <p>Het lettertype <code>Courier</code> wordt gebruikt om iets op te schrijven dat u op het toetsenbord kunt typen. Uitzondering hierop zijn de volgende speciale toetsen: <code>SPATIEBALK</code>, <code>CTRL</code>, <code>ALT</code>, <code>SUPER</code>, <code>MENU</code>, <code>TAB</code>, <code>HOME</code>, <code>END</code>, <code>ESC</code>, <code>DELETE</code>, <code>PageDown</code>, <code>PageUp</code>, <code>PrintScreen</code>, <code>F1</code>, <code>F2</code> … en <code>ENTER</code>, hier dient u betreffende toets in te drukken in plaats van het woord in te typen.</p>
+<h1 id="wat-is-linux">Wat is Linux</h1>
+<p><a href="https://www.computerhope.com/jargon/l/linux.htm"><em>Linux</em></a> is een <a href="https://www.computerhope.com/jargon/o/os.htm"><em>besturingssysteem</em></a>. Een besturingssysteem zorgt ervoor dat hardwarecomponenten worden aangestuurd en toepassingen kunnen draaien Voorbeelden van andere besturingssystemen zijn: Windows, MacOS, en Chromium OS</p>
+<h2 id="linux-is-vrij">Linux is vrij</h2>
+<p>Linux is gebaseerd op de filosofie dat software en ideeën vrij gedeeld moeten worden.</p>
+<p>Linux is vrije software onder de <a href="https://www.computerhope.com/jargon/g/gpl.htm"><em>GNU Public License</em></a>.</p>
+<h1 id="waarom-debian">Waarom Debian</h1>
+<p>Daarom</p>
 <h1 id="rondleiding-gnome">Rondleiding GNOME</h1>
 <h2 id="aanmelden-in-de-displaymanager">Aanmelden in de displaymanager</h2>
 <p>Met account (gebruikersnaam=<code>tux</code>, wachtwoord=<code>tux</code>)</p>
