deploy: d8d79d644ba014bc610f4ba02e8f086935510ab3

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <li><p><a href="samenvatting.html">Samenvatting</a> <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/samenvatting.pdf">PDF versie</a></p></li>
 <li><p><a href="oefeningen.html">Oefeningen</a> <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/oefeningen.pdf">PDF versie</a></p></li>
 <li><p><a href="begrippen.html">Begrippenlijst</a> <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/begrippen.pdf">PDF versie</a></p></li>
+<li><p><a href="https://github.com/slspeek/debian-gnome-sneltoetsen/releases/latest/download/debian-gnome-sneltoetsen.pdf">Sneltoetsen kaart</a></p></li>
 </ol>
 <h2 id="presentaties">Presentaties</h2>
 <ol type="1">
