--- a/oefeningen.html
+++ b/oefeningen.html
@@ -458,13 +458,13 @@
 <ul>
 <li><p>Ga naar ‘Add-ons en thema’s’ met <code>CTRL+SHIFT+A</code> of via het hamburger menu rechtbovenin.</p></li>
 <li><p>Selecteer aan de linkerzijde van de pagina ‘Extensies’</p></li>
-<li><p>Type in het zoekvak <code>Adblocker for Youtube</code> en installeer deze extensie</p></li>
+<li><p>Type in het zoekvak <code>Adblocker Ultimate</code> en installeer deze extensie</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
 <li><p>Ga naar de URL: <code>slspeek.github.io/linux-beginners-cursus/samenvatting.html</code>.</p></li>
-<li><p>Scroll omlaag naar “Internet browser: Firefox” en dan naar “Essentiële extensies installeren”, klik op de link van “I don’t care about cookies”</p></li>
+<li><p>Scroll omlaag naar “Internet browser: Firefox” en dan naar “Aanbevolen extensies installeren”, klik op de link van “I don’t care about cookies”</p></li>
 <li><p>Klik op de knop “Toevoegen aan Firefox”</p></li>
 <li><p>Ga na met <code>CTRL+SHIFT+A</code> (Add-ons) of de extensie is geïnstalleerd</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
