--- a/samenvatting.html
+++ b/samenvatting.html
@@ -229,9 +229,9 @@
 <li><p>Via slepen op de bladwijzerbalk</p></li>
 </ul></li>
 </ul></li>
-<li><p>Essentiële extensies installeren</p>
+<li><p>Aanbevolen extensies installeren</p>
+<p><!-- - [*Adblocker for Youtube*](https://addons.mozilla.org/nl/firefox/addon/adblock-for-youtube/?utm_source=addons.mozilla.org&utm_medium=referral&utm_content=search) --></p>
 <ul>
-<li><p><a href="https://addons.mozilla.org/nl/firefox/addon/adblock-for-youtube/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=search"><em>Adblocker for Youtube</em></a></p></li>
 <li><p><a href="https://addons.mozilla.org/nl/firefox/addon/adblocker-ultimate/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=search"><em>Adblocker Ultimate</em></a></p></li>
 <li><p><a href="https://addons.mozilla.org/nl/firefox/addon/i-dont-care-about-cookies/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=search"><em>I don’t care about cookies</em></a></p></li>
 </ul></li>
