--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 </ol>
 <h2 id="presentaties">Presentaties</h2>
 <ol type="1">
-<li><p><a href="wat-is-linux.html">Wat is Linux</a></p></li>
-<li><p><a href="waarom-debian.html">Waarom Debian Linux</a></p></li>
+<li><p><a href="inleiding.html">Inleiding</a></p></li>
 <li><p><a href="https://docs.google.com/presentation/d/1jGO4bEBD3utfBr7wg9z-2b5DdCehr2GIATCu6nqmAK8/edit?usp=sharing">Motivatie (oude versie)</a></p></li>
 <li><p><a href="rondleiding-gnome.html">Rondleiding GNOME</a></p></li>
 <li><p><a href="toepassingen-starten-en-afsluiten.html">Toepassingen starten en afsluiten</a></p></li>
@@ -47,6 +46,7 @@
 <li><p><a href="vensters-en-werkbladen.html">Vensters en werkbladen</a></p></li>
 <li><p><a href="instellingen.html">Instellingen</a></p></li>
 <li><p><a href="toepassingen-installeren.html">Toepassingen installeren</a></p></li>
+<li><p><a href="verder-studeren.html">Verder studeren</a></p></li>
 </ol>
 </body>
 </html>
