deploy: 4bb12714f1e4ddffa13df2aee002838188791d3c

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <li><p><a href="oefeningen.html">Oefeningen</a> <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/oefeningen.pdf">PDF versie</a></p></li>
 <li><p><a href="begrippen.html">Begrippenlijst</a> <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/begrippen.pdf">PDF versie</a></p></li>
 <li><p><a href="https://github.com/slspeek/debian-gnome-sneltoetsen/releases/latest/download/debian-gnome-sneltoetsen.pdf">Sneltoetsen kaart</a></p></li>
+<li><p><a href="verder-leren.html">Verder leren</a> <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/verder-leren.pdf">PDF versie</a></p></li>
 </ol>
 <h2 id="presentaties">Presentaties</h2>
 <ol type="1">
@@ -46,7 +47,6 @@
 <li><p><a href="vensters-en-werkbladen.html">Vensters en werkbladen</a></p></li>
 <li><p><a href="instellingen.html">Instellingen</a></p></li>
 <li><p><a href="toepassingen-installeren.html">Toepassingen installeren</a></p></li>
-<li><p><a href="verder-studeren.html">Verder studeren</a></p></li>
 </ol>
 </body>
 </html>
